dodate g33 i g34 komande
